[gd_scene load_steps=49 format=2]

[ext_resource path="res://Icons/Board/movelighthist.png" type="Texture" id=1]
[ext_resource path="res://Icons/Board/interactdarkhist.png" type="Texture" id=2]
[ext_resource path="res://Icons/Board/interactlight.png" type="Texture" id=3]
[ext_resource path="res://Icons/Board/interactdark.png" type="Texture" id=4]
[ext_resource path="res://Icons/Board/interactlighthist.png" type="Texture" id=5]
[ext_resource path="res://Icons/Board/light.png" type="Texture" id=6]
[ext_resource path="res://Icons/Pieces/bb.png" type="Texture" id=7]
[ext_resource path="res://Icons/Pieces/bp.png" type="Texture" id=8]
[ext_resource path="res://Icons/Pieces/wn.png" type="Texture" id=9]
[ext_resource path="res://Icons/Pieces/wq.png" type="Texture" id=10]
[ext_resource path="res://Icons/Board/selectlight.png" type="Texture" id=11]
[ext_resource path="res://Icons/Board/movelight.png" type="Texture" id=12]
[ext_resource path="res://Icons/Board/selectdark.png" type="Texture" id=13]
[ext_resource path="res://Icons/Board/dark.png" type="Texture" id=14]
[ext_resource path="res://src/Board.gd" type="Script" id=15]
[ext_resource path="res://Icons/Board/movedarkhist.png" type="Texture" id=16]
[ext_resource path="res://Icons/Pieces/bn.png" type="Texture" id=17]
[ext_resource path="res://Icons/Board/movedark.png" type="Texture" id=18]
[ext_resource path="res://Icons/Board/lighthist.png" type="Texture" id=19]
[ext_resource path="res://Icons/Pieces/bk.png" type="Texture" id=20]
[ext_resource path="res://Icons/Pieces/bq.png" type="Texture" id=21]
[ext_resource path="res://Icons/Pieces/br.png" type="Texture" id=22]
[ext_resource path="res://Icons/Pieces/wr.png" type="Texture" id=23]
[ext_resource path="res://Icons/Pieces/wk.png" type="Texture" id=24]
[ext_resource path="res://Icons/Pieces/wp.png" type="Texture" id=25]
[ext_resource path="res://Icons/Board/darkhist.png" type="Texture" id=26]
[ext_resource path="res://Icons/Pieces/wb.png" type="Texture" id=27]
[ext_resource path="res://Icons/Board/checklight.png" type="Texture" id=28]
[ext_resource path="res://Icons/Board/checkdark.png" type="Texture" id=29]
[ext_resource path="res://src/Audio Move.gd" type="Script" id=30]
[ext_resource path="res://src/Pieces.gd" type="Script" id=31]
[ext_resource path="res://sfx/Capture.mp3" type="AudioStream" id=32]
[ext_resource path="res://src/Checkmate.gd" type="Script" id=33]
[ext_resource path="res://src/Button.gd" type="Script" id=34]
[ext_resource path="res://src/Camera2D.gd" type="Script" id=35]
[ext_resource path="res://sfx/Move.mp3" type="AudioStream" id=36]
[ext_resource path="res://src/Audio System.gd" type="Script" id=37]
[ext_resource path="res://sfx/checkmate.mp3" type="AudioStream" id=38]
[ext_resource path="res://src/Hovered Piece.gd" type="Script" id=39]
[ext_resource path="res://Icons/Board/interactlightcheck.png" type="Texture" id=40]
[ext_resource path="res://Icons/Board/interactdarkcheck.png" type="Texture" id=41]
[ext_resource path="res://src/Audio Capture.gd" type="Script" id=42]
[ext_resource path="res://icon.png" type="Texture" id=44]

[sub_resource type="Theme" id=5]

[sub_resource type="TileSet" id=3]
0/name = "dark.png 0"
0/texture = ExtResource( 14 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 100, 100 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "light.png 1"
1/texture = ExtResource( 6 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 100, 100 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "darkhist.png 2"
2/texture = ExtResource( 26 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 100, 100 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "lighthist.png 3"
3/texture = ExtResource( 19 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 100, 100 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "movedark.png 4"
4/texture = ExtResource( 18 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 100, 100 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "movelight.png 5"
5/texture = ExtResource( 12 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 100, 100 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "movedarkhist.png 6"
6/texture = ExtResource( 16 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 0, 100, 100 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "movelighthist.png 7"
7/texture = ExtResource( 1 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 0, 0, 100, 100 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "interactdark.png 8"
8/texture = ExtResource( 4 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 0, 0, 100, 100 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "interactlight.png 9"
9/texture = ExtResource( 3 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 0, 0, 100, 100 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0
10/name = "interactdarkhist.png 10"
10/texture = ExtResource( 2 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 0, 0, 100, 100 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0
11/name = "interactlighthist.png 11"
11/texture = ExtResource( 5 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 0, 0, 100, 100 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape_one_way = false
11/shape_one_way_margin = 0.0
11/shapes = [  ]
11/z_index = 0
12/name = "selectdark.png 12"
12/texture = ExtResource( 13 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 0, 0, 100, 100 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/shape_offset = Vector2( 0, 0 )
12/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
12/shape_one_way = false
12/shape_one_way_margin = 0.0
12/shapes = [  ]
12/z_index = 0
13/name = "selectlight.png 13"
13/texture = ExtResource( 11 )
13/tex_offset = Vector2( 0, 0 )
13/modulate = Color( 1, 1, 1, 1 )
13/region = Rect2( 0, 0, 100, 100 )
13/tile_mode = 0
13/occluder_offset = Vector2( 0, 0 )
13/navigation_offset = Vector2( 0, 0 )
13/shape_offset = Vector2( 0, 0 )
13/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
13/shape_one_way = false
13/shape_one_way_margin = 0.0
13/shapes = [  ]
13/z_index = 0
14/name = "checkdark.png 14"
14/texture = ExtResource( 29 )
14/tex_offset = Vector2( 0, 0 )
14/modulate = Color( 1, 1, 1, 1 )
14/region = Rect2( 0, 0, 100, 100 )
14/tile_mode = 0
14/occluder_offset = Vector2( 0, 0 )
14/navigation_offset = Vector2( 0, 0 )
14/shape_offset = Vector2( 0, 0 )
14/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
14/shape_one_way = false
14/shape_one_way_margin = 0.0
14/shapes = [  ]
14/z_index = 0
15/name = "checklight.png 15"
15/texture = ExtResource( 28 )
15/tex_offset = Vector2( 0, 0 )
15/modulate = Color( 1, 1, 1, 1 )
15/region = Rect2( 0, 0, 100, 100 )
15/tile_mode = 0
15/occluder_offset = Vector2( 0, 0 )
15/navigation_offset = Vector2( 0, 0 )
15/shape_offset = Vector2( 0, 0 )
15/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
15/shape_one_way = false
15/shape_one_way_margin = 0.0
15/shapes = [  ]
15/z_index = 0
16/name = "interactdarkcheck.png 16"
16/texture = ExtResource( 41 )
16/tex_offset = Vector2( 0, 0 )
16/modulate = Color( 1, 1, 1, 1 )
16/region = Rect2( 0, 0, 100, 100 )
16/tile_mode = 0
16/occluder_offset = Vector2( 0, 0 )
16/navigation_offset = Vector2( 0, 0 )
16/shape_offset = Vector2( 0, 0 )
16/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
16/shape_one_way = false
16/shape_one_way_margin = 0.0
16/shapes = [  ]
16/z_index = 0
17/name = "interactlightcheck.png 17"
17/texture = ExtResource( 40 )
17/tex_offset = Vector2( 0, 0 )
17/modulate = Color( 1, 1, 1, 1 )
17/region = Rect2( 0, 0, 100, 100 )
17/tile_mode = 0
17/occluder_offset = Vector2( 0, 0 )
17/navigation_offset = Vector2( 0, 0 )
17/shape_offset = Vector2( 0, 0 )
17/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
17/shape_one_way = false
17/shape_one_way_margin = 0.0
17/shapes = [  ]
17/z_index = 0

[sub_resource type="TileSet" id=2]
0/name = "bk.png 0"
0/texture = ExtResource( 20 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 100, 100 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "bp.png 1"
1/texture = ExtResource( 8 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 100, 100 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "bb.png 2"
2/texture = ExtResource( 7 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 100, 100 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "bn.png 3"
3/texture = ExtResource( 17 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 100, 100 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "br.png 4"
4/texture = ExtResource( 22 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 100, 100 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "bq.png 5"
5/texture = ExtResource( 21 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 100, 100 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "wk.png 6"
6/texture = ExtResource( 24 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 0, 100, 100 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "wp.png 7"
7/texture = ExtResource( 25 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 0, 0, 100, 100 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "wb.png 8"
8/texture = ExtResource( 27 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 0, 0, 100, 100 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "wn.png 9"
9/texture = ExtResource( 9 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 0, 0, 100, 100 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0
10/name = "wr.png 10"
10/texture = ExtResource( 23 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 0, 0, 100, 100 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0
11/name = "wq.png 11"
11/texture = ExtResource( 10 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 0, 0, 100, 100 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape_one_way = false
11/shape_one_way_margin = 0.0
11/shapes = [  ]
11/z_index = 0

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 20 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 17 ), ExtResource( 22 ), ExtResource( 21 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 27 ), ExtResource( 9 ), ExtResource( 23 ), ExtResource( 10 ) ],
"loop": false,
"name": "Pieces",
"speed": 0.0
} ]

[sub_resource type="NativeScript" id=6]
resource_name = "GDExample"
class_name = "GDExample"

[node name="Main" type="Node2D"]
process_priority = 91

[node name="Button" type="Button" parent="."]
margin_left = 863.0
margin_top = 643.0
margin_right = 996.0
margin_bottom = 710.0
theme = SubResource( 5 )
text = "Undo"
script = ExtResource( 34 )

[node name="Audio System" type="AudioStreamPlayer2D" parent="."]
visible = false
script = ExtResource( 37 )

[node name="audio move" type="AudioStreamPlayer2D" parent="Audio System"]
stream = ExtResource( 36 )
script = ExtResource( 30 )

[node name="audio capture" type="AudioStreamPlayer2D" parent="Audio System"]
stream = ExtResource( 32 )
attenuation = 1.03527
area_mask = 2
script = ExtResource( 42 )

[node name="checkmate" type="AudioStreamPlayer2D" parent="Audio System"]
stream = ExtResource( 38 )
script = ExtResource( 33 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 400, 400 )
current = true
script = ExtResource( 35 )

[node name="Board" type="TileMap" parent="."]
tile_set = SubResource( 3 )
cell_size = Vector2( 100, 100 )
format = 1
tile_data = PoolIntArray( 0, 1, 0, 1, 0, 0, 2, 1, 0, 3, 0, 0, 4, 1, 0, 5, 0, 0, 6, 1, 0, 7, 0, 0, 65536, 0, 0, 65537, 1, 0, 65538, 0, 0, 65539, 1, 0, 65540, 0, 0, 65541, 1, 0, 65542, 0, 0, 65543, 1, 0, 131072, 1, 0, 131073, 0, 0, 131074, 1, 0, 131075, 0, 0, 131076, 1, 0, 131077, 0, 0, 131078, 1, 0, 131079, 0, 0, 196608, 0, 0, 196609, 1, 0, 196610, 0, 0, 196611, 1, 0, 196612, 0, 0, 196613, 1, 0, 196614, 0, 0, 196615, 1, 0, 262144, 1, 0, 262145, 0, 0, 262146, 1, 0, 262147, 0, 0, 262148, 1, 0, 262149, 0, 0, 262150, 1, 0, 262151, 0, 0, 327680, 0, 0, 327681, 1, 0, 327682, 0, 0, 327683, 1, 0, 327684, 0, 0, 327685, 1, 0, 327686, 0, 0, 327687, 1, 0, 393216, 1, 0, 393217, 0, 0, 393218, 1, 0, 393219, 0, 0, 393220, 1, 0, 393221, 0, 0, 393222, 1, 0, 393223, 0, 0, 393226, 18, 0, 458752, 0, 0, 458753, 1, 0, 458754, 0, 0, 458755, 1, 0, 458756, 0, 0, 458757, 1, 0, 458758, 0, 0, 458759, 1, 0 )
script = ExtResource( 15 )

[node name="Pieces" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 100, 100 )
format = 1
tile_data = PoolIntArray( 0, 4, 0, 1, 3, 0, 2, 2, 0, 3, 5, 0, 4, 0, 0, 5, 2, 0, 6, 3, 0, 7, 4, 0, 65536, 1, 0, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 393216, 7, 0, 393217, 7, 0, 393218, 7, 0, 393219, 7, 0, 393220, 7, 0, 393221, 7, 0, 393222, 7, 0, 393223, 7, 0, 458752, 10, 0, 458753, 9, 0, 458754, 8, 0, 458755, 11, 0, 458756, 6, 0, 458757, 8, 0, 458758, 9, 0, 458759, 10, 0 )
script = ExtResource( 31 )

[node name="hovered Piece" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 450, 50 )
scale = Vector2( 1.1, 1.1 )
frames = SubResource( 4 )
animation = "Pieces"
script = ExtResource( 39 )

[node name="additional1" type="AnimatedSprite" parent="hovered Piece"]
visible = false
frames = SubResource( 4 )
animation = "Pieces"
script = ExtResource( 39 )

[node name="additional2" type="AnimatedSprite" parent="hovered Piece"]
visible = false
frames = SubResource( 4 )
animation = "Pieces"
script = ExtResource( 39 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1434, 289 )
texture = ExtResource( 44 )
script = SubResource( 6 )

[connection signal="pressed" from="Button" to="Pieces" method="_on_Button_pressed"]
[connection signal="sound1" from="Audio System" to="Audio System/audio move" method="_on_Audio_System_sound1"]
[connection signal="sound2" from="Audio System" to="Audio System/audio capture" method="_on_Audio_System_sound2"]
[connection signal="sound3" from="Audio System" to="Audio System/checkmate" method="_on_Audio_System_sound3"]
[connection signal="callengine" from="Pieces" to="Sprite" method="_on_Pieces_callengine"]
[connection signal="checkmate" from="Pieces" to="Board" method="_on_Pieces_checkmate"]
[connection signal="clicked" from="Pieces" to="Board" method="_on_Pieces_clicked"]
[connection signal="drop" from="Pieces" to="hovered Piece" method="_on_Pieces_drop"]
[connection signal="drop" from="Pieces" to="hovered Piece/additional1" method="_on_Pieces_drop"]
[connection signal="drop" from="Pieces" to="hovered Piece/additional2" method="_on_Pieces_drop"]
[connection signal="pickup" from="Pieces" to="hovered Piece" method="_on_Pieces_pickup"]
[connection signal="pickup" from="Pieces" to="hovered Piece/additional1" method="_on_Pieces_pickup"]
[connection signal="pickup" from="Pieces" to="hovered Piece/additional2" method="_on_Pieces_pickup"]
[connection signal="play_sound" from="Pieces" to="Audio System" method="_on_Pieces_play_sound"]
